WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64911
DFG non-speculative JIT does not use() the aliased GetByVal, resulting in bloated use counts
https://bugs.webkit.org/show_bug.cgi?id=64911
Summary
DFG non-speculative JIT does not use() the aliased GetByVal, resulting in blo...
Filip Pizlo
Reported
2011-07-20 17:36:23 PDT
The DFG non-speculative JIT does not use() the aliased GetByVal when compiling GetByVal, which results in that first GetByVal's use count never dropping to zero. The DFG non-speculative JIT should call use() on the aliased GetByVal.
Attachments
the patch
(1.31 KB, patch)
2011-07-20 17:38 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-07-20 17:38:51 PDT
Created
attachment 101535
[details]
the patch
WebKit Review Bot
Comment 2
2011-07-20 19:12:38 PDT
Comment on
attachment 101535
[details]
the patch Clearing flags on attachment: 101535 Committed
r91439
: <
http://trac.webkit.org/changeset/91439
>
WebKit Review Bot
Comment 3
2011-07-20 19:12:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug