DFG non-speculative JIT does not use() the aliased GetByVal, resulting in bloated use counts. https://bugs.webkit.org/show_bug.cgi?id=64911

Patch by Filip Pizlo <fpizlo@apple.com> on 2011-07-20
Reviewed by Gavin Barraclough.

Inserted a call to use() for the aliased GetByVal.

* dfg/DFGNonSpeculativeJIT.cpp:
(JSC::DFG::NonSpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/80659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91439 268f45cc-cd09-0410-ab3c-d52691b4dbfc